--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.0",
     "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
