--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^4.13.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.4.0"
+    "passport-local-mongoose": "^4.4.0",
+    "passport-local-mongoose-email": "^0.1.3"
   }
 }
