--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
-    "passport-local-mongoose-email": "^0.1.3"
+    "passport-local-mongoose-email": "^0.1.3",
+    "pluralize": "^7.0.0"
   }
 }
